--- a/src/client/index.html
+++ b/src/client/index.html
@@ -62,19 +62,7 @@
     <h4 style="font-size: 24px; font-weight: 300; margin-left: 25px;">Please Wait...</h4>
   </div>
 </div>
-<div id="nomobile" class="uk-visible-small uk-hidden-medium uk-hidden-large" style="
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    z-index: 99999999;
-    background: #f6f6f6;
-    display: none;
-">
-  <div style="position: absolute; top: 50%; left: 0; width: 100%;text-align: center;font-size: 28px; font-weight: 300;"><a
-          href="/mobile">View Mobile Site...</a></div>
-</div>
+<!-- Mobile overlay removed - using responsive design instead -->
 
 <div class="disconnected loader-wrapper" style="display: none; opacity: 0; z-index: 999997;">
   <div class="shadow-wrapper">
@@ -113,7 +101,7 @@
 <!--Tour Start Here-->
 <div id="__tourEnabled" class="hide" style="display:none; visibility: hidden; opacity: 0;">{{data.common.showTour}}</div>
 <div id="__timezone" class="hide" style="display:none; visibility: hidden; opacity: 0;">{{data.common.timezone}}</div>
-<div class="wrapper uk-hidden-small" style="overflow: hidden; height: 100%;">
+<div class="wrapper responsive-wrapper" style="overflow: hidden; height: 100%;">
 
   <div id="topbar"></div>
   <div id="sidebar"></div>
@@ -139,29 +127,7 @@
 <audio id="error_audio" src="/sounds/error.ogg" class="uk-hidden"></audio>
 <audio id="clicksound" src="/sounds/click.ogg" class="uk-hidden"></audio>
 
-<script type="text/javascript">
-  // Проверяем мобильную версию только после полной загрузки страницы
-  window.addEventListener('load', function() {
-    if (screen.width <= 800) {
-      // Проверяем доступность мобильной версии
-      fetch('/mobile')
-        .then(function(response) {
-          if (response.ok) {
-            // Мобильная версия доступна - переходим
-            document.location = '/mobile';
-          } else {
-            // Мобильная версия недоступна - показываем overlay
-            document.getElementById('nomobile').style.display = 'block';
-          }
-        })
-        .catch(function(error) {
-          // Ошибка загрузки - показываем overlay
-          console.warn('Mobile version not available:', error);
-          document.getElementById('nomobile').style.display = 'block';
-        });
-    }
-  });
-</script>
+<!-- Mobile redirect removed - using responsive design instead -->
 
 <script src="/js/trudesk.min.js"></script>
 
